trymito: fix mobile spacing

--- a/trymito.io/styles/ExcelToPython.module.css
+++ b/trymito.io/styles/ExcelToPython.module.css
@@ -3,6 +3,10 @@
     position: relative;
 }
 
+.content_and_table_of_contents_container {
+    width: 100%;
+}
+
 .title_card {
     padding-top: 4rem;
 }
@@ -131,13 +135,14 @@
     margin-left: 5px;
 }
 
+
+
 @media only screen and (min-width: 50em) {
 
     .content_and_table_of_contents_container {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        width: 100%;
     }
 
     .table_of_contents_container {
